DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Apr-27-2007 aronb       Changed clustering to be single-threaded.
                        NEW VERSION: 1.1.26
Apr-05-2007 patrick     Made Cocoa the default windowing system on Mac OS X.
Mar-03-2007 patrick     Added support for Cocoa input windows on Mac OS X.
                        NEW VERSION: 1.1.25
Mar-02-2007 patrick     Updated for VPR 1.1.42.
Feb-20-2007 patrick     Initial Unicode support for gadget::KeyEvent.
                        NEW VERSION: 1.1.24
Jan-30-2007 patrick     Eliminated the need to set GADGET_BASE_DIR on Windows
                        to run applications.
                        NEW VERSION: 1.1.23
Jan-03-2007 aronb       Rewrote the Polhemus Fastrak driver.
                        NEW VERSION: 1.1.22
Dec-14-2006 aronb       Allow programmatic creation of usable device proxy
                        objects.
                        NEW VERSION: 1.1.21
Dec-13-2006 aronb       Added gadget::InputManager::shutdown(). Renamed
                        gadget::BaseDeviceInterface::refreshAllDevices() to
                        gadget::BaseDeviceInterface::refreshAllInterfaces().
                        NEW VERSION: 1.1.20
Dec-09-2006 patrick     Fixed frame delay problems in devices that are relative
                        to other proxied devices. Patch submitted by Frederic
                        Drolet.
                        NEW VERSION: 1.1.19
Nov-14-2006 patrick     Replaced uses of vpr::ReturnStatus with bool.
                        NEW VERSION: 1.1.18
Nov-07-2006 patrick     Added analog support to the VRPN driver.
Oct-01-2006 patrick     Updated for VPR 1.1.35.
                        NEW VERSION: 1.1.17
Oct-01-2006 patrick     Updated to handle the vpr::Thread constructor throwing
                        an exception.
                        NEW VERSION: 1.1.16