@@ -1,3 +1,4 @@
+1.1.27-0 @05/02/2007 02:00:00 UTC@
 1.1.26-0 @04/28/2007 14:15:00 UTC@
 1.1.25-0 @03/04/2007 05:20:00 UTC@
 1.1.24-0 @02/21/2007 03:50:00 UTC@
