@@ -2,13 +2,13 @@
 <?org-vrjuggler-jccl-settings configuration.version="3.0"?>
 <configuration xmlns="http://www.vrjuggler.org/jccl/xsd/3.0/configuration" name="Configuration" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.vrjuggler.org/jccl/xsd/3.0/configuration http://www.vrjuggler.org/jccl/xsd/3.0/configuration.xsd">
    <elements>
-      <display_system name="Pipe Setup" version="2">
+      <display_system name="Pipe Setup" version="3">
          <number_of_pipes>4</number_of_pipes>
-         <x11_pipes>mammoth:0.0</x11_pipes>
-         <x11_pipes>mammoth:1.0</x11_pipes>
-         <x11_pipes>mammoth:2.0</x11_pipes>
-         <x11_pipes>mammoth:1.0</x11_pipes>
-         <x11_pipes>snow:0.0</x11_pipes>
+         <pipes>mammoth:0.0</pipes>
+         <pipes>mammoth:1.0</pipes>
+         <pipes>mammoth:2.0</pipes>
+         <pipes>mammoth:1.0</pipes>
+         <pipes>snow:0.0</pipes>
          <use_swap_group>false</use_swap_group>
       </display_system>
       <display_window name="RightScreen" version="5">
