@@ -752,9 +752,9 @@
       </cluster_manager>
       <cluster_node name="Node 0" version="1">
          <display_system>
-            <display_system name="Node 0 Display System" version="2">
+            <display_system name="Node 0 Display System" version="3">
                <number_of_pipes>1</number_of_pipes>
-               <x11_pipes>-1</x11_pipes>
+               <pipes>-1</pipes>
                <use_swap_group>false</use_swap_group>
             </display_system>
          </display_system>
@@ -886,9 +886,9 @@
       </cluster_node>
       <cluster_node name="Node 1" version="1">
          <display_system>
-            <display_system name="Node 1 Display System" version="2">
+            <display_system name="Node 1 Display System" version="3">
                <number_of_pipes>1</number_of_pipes>
-               <x11_pipes>-1</x11_pipes>
+               <pipes>-1</pipes>
                <use_swap_group>false</use_swap_group>
             </display_system>
          </display_system>
