@@ -21,9 +21,9 @@
       </start_barrier_plugin>
       <cluster_node name="Node(ptah-1)" version="1">
          <display_system>
-            <display_system name="display_system 0" version="2">
+            <display_system name="display_system 0" version="3">
                <number_of_pipes>1</number_of_pipes>
-               <x11_pipes>-1</x11_pipes>
+               <pipes>-1</pipes>
                <use_swap_group>false</use_swap_group>
             </display_system>
          </display_system>
@@ -93,9 +93,9 @@
       </cluster_node>
       <cluster_node name="Node(ptah-2)" version="1">
          <display_system>
-            <display_system name="display_system 0" version="2">
+            <display_system name="display_system 0" version="3">
                <number_of_pipes>1</number_of_pipes>
-               <x11_pipes>-1</x11_pipes>
+               <pipes>-1</pipes>
                <use_swap_group>false</use_swap_group>
             </display_system>
          </display_system>
@@ -165,9 +165,9 @@
       </cluster_node>
       <cluster_node name="Node(ptah-3)" version="1">
          <display_system>
-            <display_system name="display_system 0" version="2">
+            <display_system name="display_system 0" version="3">
                <number_of_pipes>1</number_of_pipes>
-               <x11_pipes>-1</x11_pipes>
+               <pipes>-1</pipes>
                <use_swap_group>false</use_swap_group>
             </display_system>
          </display_system>
@@ -237,9 +237,9 @@
       </cluster_node>
       <cluster_node name="Node(ptah-4)" version="1">
          <display_system>
-            <display_system name="display_system 0" version="2">
+            <display_system name="display_system 0" version="3">
                <number_of_pipes>1</number_of_pipes>
-               <x11_pipes>-1</x11_pipes>
+               <pipes>-1</pipes>
                <use_swap_group>false</use_swap_group>
             </display_system>
          </display_system>
