@@ -478,16 +478,16 @@
          </key_pair>
          <device_host />
       </simulated_digital_device>
-      <display_system name="Pipe Setup" version="2">
+      <display_system name="Pipe Setup" version="3">
          <number_of_pipes>1</number_of_pipes>
-         <x11_pipes>-1</x11_pipes>
-         <x11_pipes>-1</x11_pipes>
-         <x11_pipes>-1</x11_pipes>
-         <x11_pipes>-1</x11_pipes>
-         <x11_pipes>-1</x11_pipes>
-         <x11_pipes>:0.0</x11_pipes>
-         <x11_pipes>:0.0</x11_pipes>
-         <x11_pipes>:0.0</x11_pipes>
+         <pipes>-1</pipes>
+         <pipes>-1</pipes>
+         <pipes>-1</pipes>
+         <pipes>-1</pipes>
+         <pipes>-1</pipes>
+         <pipes>:0.0</pipes>
+         <pipes>:0.0</pipes>
+         <pipes>:0.0</pipes>
          <use_swap_group>false</use_swap_group>
       </display_system>
       <display_window name="SimWindow1" version="5">
