@@ -57,4 +57,48 @@
          </xsl:stylesheet>
       </upgrade_transform>
    </definition_version>
+   <definition_version version="3" label="Display System">
+      <abstract>false</abstract>
+      <help>Graphics pipe configuration for display windows. (&lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/2.0/configuring_vr_juggler/ch03.html#section.display.manager"&gt;more on the Display Manager&lt;/a&gt;)</help>
+      <parent/>
+      <category>/Display</category>
+      <property valuetype="integer" variable="false" name="number_of_pipes">
+         <help>The number of pipes on the system. (&lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/2.0/configuring_vr_juggler/ch03.html#section.display.manager"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Number of Pipes" defaultvalue="0"/>
+      </property>
+      <property valuetype="string" variable="true" name="pipes">
+         <help>The pipe identifier. For the X Window System, this is the display string for a pipe (e.g., :1.0). The string "-1" is treated as being equal to the &lt;tt&gt;$DISPLAY&lt;/tt&gt; environment variable. For Cocoa, this is treated as an integer index into the available screens. NOTE: This is a zero-based list. (&lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/2.0/configuring_vr_juggler/ch03.html#section.display.manager"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Pipe Identifier" defaultvalue=":0.0"/>
+      </property>
+        <property valuetype="boolean" variable="false" name="use_swap_group">
+         <help>If true, attempt to use a hardware swap group to keep all window buffer swaps in sync.  Also if using cluster this will try to create a swap group across the cluster.</help>
+         <value label="Use Swap Group" defaultvalue="false"/>
+      </property>
+      <upgrade_transform>
+         <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:jconf="http://www.vrjuggler.org/jccl/xsd/3.0/configuration" version="1.0">
+            <xsl:output method="xml" version="1.0" encoding="UTF-8" indent="yes"/>
+            <xsl:variable name="jconf">http://www.vrjuggler.org/jccl/xsd/3.0/configuration</xsl:variable>
+
+            <xsl:template match="/">
+                <xsl:apply-templates/>
+            </xsl:template>
+
+            <xsl:template match="jconf:display_system">
+               <xsl:element namespace="{$jconf}" name="display_system">
+                  <xsl:attribute name="name">
+                     <xsl:value-of select="@name"/>
+                  </xsl:attribute>
+                  <xsl:attribute name="version">3</xsl:attribute>
+                  <xsl:copy-of select="./jconf:number_of_pipes"/>
+                  <xsl:for-each select="./jconf:x11_pipes">
+                     <xsl:element namespace="{$jconf}" name="pipes">
+                        <xsl:value-of select="."/>
+                     </xsl:element>
+                  </xsl:for-each>
+                  <xsl:copy-of select="./jconf:use_swap_group"/>
+               </xsl:element>
+            </xsl:template>
+         </xsl:stylesheet>
+      </upgrade_transform>
+   </definition_version>
 </definition>
